syntax = "proto3";

package v2;

import "google/protobuf/any.proto";
import "v2/widget.proto";

option go_package = "github.com/hotstar/hs-core-api-go/v2";
option java_multiple_files = true;
option java_package = "com.hotstar.bff.api.v2";

message Error {
    string error_code = 1;
    string error_message = 2;
    google.protobuf.Any data = 3 [deprecated = true];
    WidgetWrapper widget_wrapper = 4;
}
