syntax = "proto3";

package feature.login;

import "v2/commons/login_initiate_by.proto";

option go_package = "github.com/hotstar/hs-core-api-go/v2/subcontrollers/login";
option java_multiple_files = true;
option java_package = "com.hotstar.ui.model.feature.login";

message VerifyPhoneLoginRequest {
    string verification_code = 3;
    
    Mode mode = 4;
    enum Mode {
        MANUAL = 0;
        AUTO = 1;
    }
    
    ConsentStatus consent_status = 5;
    enum ConsentStatus {
        ALREADY_OPTED = 0;
        OPT_OUT = 1;
        OPT_IN = 2;
    }
    
    LoginDeviceMeta login_device_meta = 6;
    message LoginDeviceMeta {
        string device_name = 1;
    }
    
    Source source = 7;
    enum Source {
        LOGIN = 0;
        PRE_LAUNCH = 1;
        SKIPPABLE_LOGIN = 2;
    }
    
    v2.commons.login_initiate_by.LoginInitiateBy initiate_by = 8 [deprecated = true];
    
    oneof PhoneVerificationMethod {
        string phone_number = 1;
        string encrypted_identifier = 2;
        string email_address = 9;
    }
}
