syntax = "proto3";

package widget;

import "base/template.proto";
import "base/widget_commons.proto";
import "base/actions.proto";
import "feature/login_method/login_method.proto";
import "feature/atom/button.proto";

option go_package = "github.com/hotstar/hs-core-ui-models-go/widget";
option java_multiple_files = true;
option java_package = "com.hotstar.ui.model.widget";

message VerifyOtpWidget {
    base.Template template = 1 [deprecated = true];
    base.WidgetCommons widget_commons = 2;
    
    Data data = 11;
    message Data {
        string title = 1;
        int32 otp_length = 2;
        string resend_otp_info_text = 3;
        int32 resend_disable_duration_sec = 4;
        Button resend_otp = 5;
        Button resend_otp_ivr = 6;
        Button verify_otp_button = 7;
        string help_rich_text = 8;
        string phone_number = 9;
        bool is_error = 10;
        string error_message = 11;
        string widget_title = 12;
        string edit_button_text = 13;
        string email_address = 14;
        string step_name = 15;
        OTPSource otp_source = 16;
        string consent_text = 17;
        SkipCTA skip_button = 18;
        bool recaptcha_enabled = 19;
        LoginData login_data = 20;
        string sub_title = 21;
        feature.atom.Button resend_otp_email = 22;
        feature.atom.Button back_button = 23;
        string resend_otp_info_pre_text = 24;
        string resend_otp_info_post_text = 25;
        string resent_toast_text = 26;
    }
    
    reserved 3 to 10;
    
    message Button {
        string text = 1;
        base.Actions actions = 2;
        string icon_name = 3;
    }
    
    message SkipCTA {
        string text = 1;
        string icon_name = 2;
        base.Actions actions = 3;
    }
    
    message LoginData {
        feature.login_method.LoginMethod login_method = 1;
    }
    
    enum OTPSource {
        DEFAULT = 0;
        PHONE = 1;
        EMAIL = 2;
    }
}
